--- a/package.json
+++ b/package.json
@@ -22,15 +22,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^20.3.0",
-    "@angular/compiler": "^20.3.0",
-    "@angular/core": "^20.3.0",
-    "@angular/fire": "^20.0.1",
-    "@angular/forms": "^20.3.0",
-    "@angular/platform-browser": "^20.3.0",
-    "@angular/router": "^20.3.0",
+    "@angular/common": "^20.0.0",
+    "@angular/compiler": "^20.0.0",
+    "@angular/core": "^20.0.0",
+    "@angular/fire": "^20.0.0",
+    "@angular/forms": "^20.0.0",
+    "@angular/platform-browser": "^20.0.0",
+    "@angular/router": "^20.0.0",
     "firebase": "^12.4.0",
     "rxjs": "~7.8.0",
+    "scs-solver": "^1.0.2",
     "tesseract.js": "^6.0.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
