Integrate solver and find best formations.

--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "@angular/forms": "^20.0.0",
     "@angular/platform-browser": "^20.0.0",
     "@angular/router": "^20.0.0",
+    "@types/mathjs": "^9.4.1",
     "firebase": "^12.4.0",
+    "mathjs": "^15.0.0",
     "rxjs": "~7.8.0",
     "scs-solver": "^1.0.2",
     "tesseract.js": "^6.0.1",
