--- a/angular.json
+++ b/angular.json
@@ -29,7 +29,12 @@
             ],
             "scripts": [],
             "allowedCommonJsDependencies": [
-              "scs-solver"
+              "scs-solver",
+              "typed-function",
+              "javascript-natural-sort",
+              "tiny-emitter",
+              "escape-latex",
+              "seedrandom"
             ]
           },
           "configurations": {
@@ -38,7 +43,7 @@
                 {
                   "type": "initial",
                   "maximumWarning": "500kb",
-                  "maximumError": "1mb"
+                  "maximumError": "2mb"
                 },
                 {
                   "type": "anyComponentStyle",
