--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,40 @@
+# See http://help.github.com/ignore-files/ for more about ignoring files.
+
+# compiled output
+/dist
+/tmp
+/out-tsc
 .firebase
-node_modules
-.angular
-dist/
-firebase-debug.log
+
+# dependencies
+/node_modules
+
+# IDEs and editors
+/.idea
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
+
+# misc
+/.sass-cache
+/connect.lock
+/coverage
+/libpeerconnection.log
+npm-debug.log
+yarn-error.log
+testem.log
+/typings
+/.angular
 src/app/firebase.config.ts
+firebase-debug.log
+
+# System files
+.DS_Store
+Thumbs.db
+
+# Solver directories
+solver/pkg
+solver/target
