--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "build:solver": "wasm-pack build solver --target web --out-name solver --out-dir target/pkg"
+    "build:solver": "wasm-pack build solver --target web --out-name solver --out-dir target/pkg",
+    "deploy": "firebase deploy"
   },
   "prettier": {
     "printWidth": 100,
@@ -31,7 +32,8 @@
     "@angular/platform-browser": "^20.0.0",
     "@angular/router": "^20.0.0",
     "@types/mathjs": "^9.4.1",
-    "firebase": "^12.4.0",
+    "firebase": "^12.6.0",
+    "firebase-tools": "^14.26.0",
     "mathjs": "^15.0.0",
     "ng": "^0.0.0",
     "rxjs": "~7.8.0",
