--- a/solver/Cargo.toml
+++ b/solver/Cargo.toml
@@ -9,3 +9,4 @@ crate-type = ["cdylib"]
 [dependencies]
 wasm-bindgen = "0.2.92"
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
