--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "build:solver": "wasm-pack build solver --target web --out-name solver --out-dir target/pkg",
+    "build:solver": "wasm-pack build solver --target web --out-name solver --out-dir target/pkg && cp solver/target/pkg/solver_bg.wasm src/assets/solver/",
     "deploy": "firebase deploy"
   },
   "prettier": {
