--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test": "ng test",
     "build:solver": "wasm-pack build solver --target web --out-name solver --out-dir target/pkg && cp solver/target/pkg/solver_bg.wasm src/assets/solver/",
     "deploy": "firebase deploy",
-    "deploy:firestore": "firebase deploy --only firestore"
+    "deploy:firestore": "firebase deploy --only firestore",
+    "firebase:login": "firebase login"
   },
   "prettier": {
     "printWidth": 100,
